# stats-calculator

./: README.md  pyproject.toml
resources/: styles.qss
stats_calculator/: app.py  common.py  inversenormal.py  layout_colorwidget.py  lineedit example.py  normalcdf temp.py  normalcdf.py  rembember.py
unused/: mpl example.py  normalcdf copy.py  pyqtgraph test.py  today.py
