[tool.poetry]
name = "stats-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stats_calculator"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"
pyqtgraph = "^0.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
